<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SCI</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Computer Science Department</string>                   <!--  Android Studio   -->
    <string name="nav_header_subtitle">Faculty Of Science Ain Shams University</string>      <!--   android.studio@android.com  -->
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_annou">Announcements</string>
    <string name="menu_news">News</string>
    <string name="menu_events">Events</string>
    <string name="menu_alert">Alerts For Students</string>

    <string name="menu_face">facebook</string>
    <string name="menu_gpa">GPA Calculator</string>
    <string name="menu_complaints">Complaints and Suggestions</string>
    <string name="your_grade_or_cgpa">Course Grade or GPA</string>

    <string name="number_of_credit_hours">Number of Credit Hours</string>
    <string name="add">Add</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="to_contact_us">Contact us</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home_page">Home Page</string>
    <string name="determine_your_grade_in_a_course_in_the_first_field">
                                        Instructions : \n\n
           1- Determine your grade of the course [A,A-,B,B+,B-,C,C+,C-,D+,D] in the first field or the Comulative GPA .\n\n
           2- Dertimine credit hours of the Course form 0 to 4 or the total credit hours in the second field .
    </string>
    <string name="college_vision">
                                college vision : \n\n
Achieving excellence and leadership in teaching and scientific research in the fields of basic sciences and their applications to serve the needs of society and improve human living conditions.
 .\n\n
   </string>
    <!--    <string name="menu_start">start_activity</string>-->
</resources>