<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home_page">

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.project_sci.ui.alert.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/nav_comp"
        android:name="com.example.project_sci.ui.comp.CompFragment"
        android:label="@string/menu_complaints"
        tools:layout="@layout/fragment_comp" />
    <fragment
        android:id="@+id/nav_gpa"
        android:name="com.example.project_sci.ui.gpa.GPAFragment"
        android:label="@string/menu_gpa"
        tools:layout="@layout/fragment_g_p_a" />
    <fragment
        android:id="@+id/nav_face"
        android:name="com.example.project_sci.ui.face.FaceFragment"
        android:label="@string/menu_face"
        tools:layout="@layout/fragment_face" />
    <fragment
        android:id="@+id/nav_annon"
        android:name="com.example.project_sci.ui.annou.AnnouFragment"
        android:label="@string/menu_annou"
        tools:layout="@layout/fragment_annou" />

    <fragment
        android:id="@+id/nav_home_page"
        android:name="com.example.project_sci.ui.home_page.Home_pagefragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home_page" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.project_sci.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.project_sci.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />
</navigation>